// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .circle-background {
  fill: #eeeeff;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .circle-background {
  fill: #ffe1e7;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .circle-background {
  fill: #eeeeff;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .circle-background {
  fill: #ffe1e7;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .circle-background {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n7gfr0-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n7gfr0-StyledIcon .circle-background {
  fill: #ffffff;
}

<label
    aria-disabled="false"
    class="e1duuirp0 e1g1zfwd0 cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer"
    for="radio-choice"
  >
    <input
      aria-checked="false"
      aria-disabled="false"
      aria-invalid="false"
      class="cache-1ihnbva-StyledRadio e1duuirp1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-n7gfr0-StyledIcon e1duuirp2"
      size="24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="circle-background"
          cx="12"
          cy="12"
          fill="#fff"
          r="6"
        />
      </g>
    </svg>
    Choice
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .circle-background {
  fill: #eeeeff;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .circle-background {
  fill: #ffe1e7;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .circle-background {
  fill: #eeeeff;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .circle-background {
  fill: #ffe1e7;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .circle-background {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n7gfr0-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n7gfr0-StyledIcon .circle-background {
  fill: #ffffff;
}

<label
    aria-disabled="false"
    class="e1duuirp0 e1g1zfwd0 cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer"
    for="radio-choice"
  >
    <input
      aria-checked="true"
      aria-disabled="false"
      aria-invalid="false"
      checked=""
      class="cache-1ihnbva-StyledRadio e1duuirp1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-n7gfr0-StyledIcon e1duuirp2"
      size="24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="circle-background"
          cx="12"
          cy="12"
          fill="#fff"
          r="6"
        />
        <circle
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    Choice
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .circle-background {
  fill: #eeeeff;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .circle-background {
  fill: #ffe1e7;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .circle-background {
  fill: #eeeeff;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .circle-background {
  fill: #ffe1e7;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .circle-background {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n7gfr0-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n7gfr0-StyledIcon .circle-background {
  fill: #ffffff;
}

<label
    aria-disabled="true"
    class="e1duuirp0 e1g1zfwd0 cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer"
    for="radio-choice"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      aria-invalid="false"
      class="cache-1ihnbva-StyledRadio e1duuirp1"
      disabled=""
      id="radio-choice"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-n7gfr0-StyledIcon e1duuirp2"
      size="24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="circle-background"
          cx="12"
          cy="12"
          fill="#fff"
          r="6"
        />
      </g>
    </svg>
    Choice
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when error 1`] = `
<DocumentFragment>
  .cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .circle-background {
  fill: #eeeeff;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .circle-background {
  fill: #ffe1e7;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .circle-background {
  fill: #eeeeff;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .circle-background {
  fill: #ffe1e7;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .circle-background {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n7gfr0-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n7gfr0-StyledIcon .circle-background {
  fill: #ffffff;
}

<label
    aria-disabled="false"
    class="e1duuirp0 e1g1zfwd0 cache-1sh7crx-StyledText-variantStyles-StyledRadioContainer"
    for="radio-choice"
  >
    <input
      aria-checked="false"
      aria-disabled="false"
      aria-invalid="true"
      class="cache-1ihnbva-StyledRadio e1duuirp1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-n7gfr0-StyledIcon e1duuirp2"
      size="24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="circle-background"
          cx="12"
          cy="12"
          fill="#fff"
          r="6"
        />
      </g>
    </svg>
    Choice
  </label>
</DocumentFragment>
`;
